// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`async aggTree sortedTreeQuery test 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_sortVal_0_0": 422244,
      "_sortVal_0_1": 309734,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Executive Management",
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Finance & Accounting",
      "_sortVal_0_0": 287139,
      "_sortVal_0_1": 208744,
      "_sortVal_0_2": "Controller-Treasurer",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_sortVal_0_0": 766571,
      "_sortVal_0_1": 564028,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_sortVal_0_0": 594761,
      "_sortVal_0_1": 366223,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Police",
      "_sortVal_0_0": 127660,
      "_sortVal_0_1": 75701,
      "_sortVal_0_2": "Revenue Protection Guard",
    },
    Object {
      "_path0": "Public Affairs & Marketing",
      "_sortVal_0_0": 181955,
      "_sortVal_0_1": 130035,
      "_sortVal_0_2": "Department Manager Gov't & Comm Rel",
    },
    Object {
      "_path0": "Safety",
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_sortVal_0_0": 709998,
      "_sortVal_0_1": 413909,
      "_sortVal_0_2": null,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "_path0": 0,
      "_sortVal_0_0": 1,
      "_sortVal_0_1": 2,
      "_sortVal_0_2": 3,
    },
    "columnMetadata": Object {
      "_path0": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "_sortVal_0_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_0_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_0_2": Object {
        "displayName": "Title",
        "type": "text",
      },
    },
    "columns": Array [
      "_path0",
      "_sortVal_0_0",
      "_sortVal_0_1",
      "_sortVal_0_2",
    ],
  },
}
`;

exports[`async aggTree sortedTreeQuery test 2`] = `
TableRep {
  "rowData": Array [
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_path1": "Group Manager Systems Capital Prog",
      "_sortVal_1_0": 212535,
      "_sortVal_1_1": 152434,
      "_sortVal_1_2": "Group Manager Systems Capital Prog",
    },
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_path1": "Group Manager, Capital Projects",
      "_sortVal_1_0": 209709,
      "_sortVal_1_1": 157300,
      "_sortVal_1_2": "Group Manager, Capital Projects",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "Assistant General Manager Operations",
      "_sortVal_1_0": 288160,
      "_sortVal_1_1": 212647,
      "_sortVal_1_2": "Assistant General Manager Operations",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "Deputy General Manager",
      "_sortVal_1_0": 281548,
      "_sortVal_1_1": 206914,
      "_sortVal_1_2": "Deputy General Manager",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
    },
    Object {
      "_path0": "Finance & Accounting",
      "_path1": "Controller-Treasurer",
      "_sortVal_1_0": 287139,
      "_sortVal_1_1": 208744,
      "_sortVal_1_2": "Controller-Treasurer",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_path1": "General Counsel",
      "_sortVal_1_0": 321543,
      "_sortVal_1_1": 238269,
      "_sortVal_1_2": "General Counsel",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_path1": "Senior Attorney",
      "_sortVal_1_0": 445028,
      "_sortVal_1_1": 325759,
      "_sortVal_1_2": "Senior Attorney",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Electrician",
      "_sortVal_1_0": 113775,
      "_sortVal_1_1": 59817,
      "_sortVal_1_2": "Electrician",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Structures Inspector",
      "_sortVal_1_0": 124962,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Structures Inspector",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Transit Vehicle Mechanic",
      "_sortVal_1_0": 104260,
      "_sortVal_1_1": 74068,
      "_sortVal_1_2": "Transit Vehicle Mechanic",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Vehicle Inspector",
      "_sortVal_1_0": 123432,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Vehicle Inspector",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Wayside Inspector",
      "_sortVal_1_0": 128332,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Wayside Inspector",
    },
    Object {
      "_path0": "Police",
      "_path1": "Revenue Protection Guard",
      "_sortVal_1_0": 127660,
      "_sortVal_1_1": 75701,
      "_sortVal_1_2": "Revenue Protection Guard",
    },
    Object {
      "_path0": "Public Affairs & Marketing",
      "_path1": "Department Manager Gov't & Comm Rel",
      "_sortVal_1_0": 181955,
      "_sortVal_1_1": 130035,
      "_sortVal_1_2": "Department Manager Gov't & Comm Rel",
    },
    Object {
      "_path0": "Safety",
      "_path1": "Chief Safety Officer",
      "_sortVal_1_0": 211941,
      "_sortVal_1_1": 152125,
      "_sortVal_1_2": "Chief Safety Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Chief Transportation Officer",
      "_sortVal_1_0": 238211,
      "_sortVal_1_1": 170383,
      "_sortVal_1_2": "Chief Transportation Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Station Agent",
      "_sortVal_1_0": 352988,
      "_sortVal_1_1": 182342,
      "_sortVal_1_2": "Station Agent",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Train Operator",
      "_sortVal_1_0": 118799,
      "_sortVal_1_1": 61184,
      "_sortVal_1_2": "Train Operator",
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "_path0": 0,
      "_path1": 1,
      "_sortVal_1_0": 2,
      "_sortVal_1_1": 3,
      "_sortVal_1_2": 4,
    },
    "columnMetadata": Object {
      "_path0": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_1_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_1_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_1_2": Object {
        "displayName": "Title",
        "type": "text",
      },
    },
    "columns": Array [
      "_path0",
      "_path1",
      "_sortVal_1_0",
      "_sortVal_1_1",
      "_sortVal_1_2",
    ],
  },
}
`;

exports[`async aggTree sortedTreeQuery test 3`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 3251221,
      "JobFamily": null,
      "Name": null,
      "Rec": 23,
      "TCOE": 4691559,
      "Title": null,
      "Union": null,
      "_depth": 0,
      "_isRoot": 1,
      "_path0": null,
      "_path1": null,
      "_pivot": null,
      "_sortVal_0": 0,
      "_sortVal_0_0": null,
      "_sortVal_0_1": null,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 309734,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": null,
      "Rec": 2,
      "TCOE": 422244,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Engineering & Systems Engineering",
      "_path1": null,
      "_pivot": "Engineering & Systems Engineering",
      "_sortVal_0": 1,
      "_sortVal_0_0": 422244,
      "_sortVal_0_1": 309734,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 1030722,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 4,
      "TCOE": 1389290,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": null,
      "_pivot": "Executive Management",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "Rec": 1,
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Assistant General Manager Operations",
      "_pivot": "Assistant General Manager Operations",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 288160,
      "_sortVal_1_1": 212647,
      "_sortVal_1_2": "Assistant General Manager Operations",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "Rec": 1,
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Deputy General Manager",
      "_pivot": "Deputy General Manager",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 281548,
      "_sortVal_1_1": 206914,
      "_sortVal_1_2": "Deputy General Manager",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 611161,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 2,
      "TCOE": 819582,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "General Manager",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "Rec": 1,
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Crunican, Grace",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 1,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "Rec": 1,
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Dugger, Dorothy",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 1,
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "Rec": 1,
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Finance & Accounting",
      "_path1": null,
      "_pivot": "Finance & Accounting",
      "_sortVal_0": 1,
      "_sortVal_0_0": 287139,
      "_sortVal_0_1": 208744,
      "_sortVal_0_2": "Controller-Treasurer",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 564028,
      "JobFamily": "Legal & Paralegal",
      "Name": null,
      "Rec": 3,
      "TCOE": 766571,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Legal & Paralegal",
      "_path1": null,
      "_pivot": "Legal & Paralegal",
      "_sortVal_0": 1,
      "_sortVal_0_0": 766571,
      "_sortVal_0_1": 564028,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 366223,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": null,
      "Rec": 5,
      "TCOE": 594761,
      "Title": null,
      "Union": "SEIU",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": null,
      "_pivot": "Maintenance, Vehicle & Facilities",
      "_sortVal_0": 1,
      "_sortVal_0_0": 594761,
      "_sortVal_0_1": 366223,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "Rec": 1,
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Police",
      "_path1": null,
      "_pivot": "Police",
      "_sortVal_0": 1,
      "_sortVal_0_0": 127660,
      "_sortVal_0_1": 75701,
      "_sortVal_0_2": "Revenue Protection Guard",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "Rec": 1,
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Public Affairs & Marketing",
      "_path1": null,
      "_pivot": "Public Affairs & Marketing",
      "_sortVal_0": 1,
      "_sortVal_0_0": 181955,
      "_sortVal_0_1": 130035,
      "_sortVal_0_2": "Department Manager Gov't & Comm Rel",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "Rec": 1,
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Safety",
      "_path1": null,
      "_pivot": "Safety",
      "_sortVal_0": 1,
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "Rec": 1,
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Safety",
      "_path1": "Chief Safety Officer",
      "_pivot": "Chief Safety Officer",
      "_sortVal_0": 1,
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
      "_sortVal_1": 1,
      "_sortVal_1_0": 211941,
      "_sortVal_1_1": 152125,
      "_sortVal_1_2": "Chief Safety Officer",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 413909,
      "JobFamily": "Transportation Operations",
      "Name": null,
      "Rec": 5,
      "TCOE": 709998,
      "Title": null,
      "Union": null,
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Transportation Operations",
      "_path1": null,
      "_pivot": "Transportation Operations",
      "_sortVal_0": 1,
      "_sortVal_0_0": 709998,
      "_sortVal_0_1": 413909,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "Base": 4,
      "JobFamily": 0,
      "Name": 3,
      "Rec": 6,
      "TCOE": 5,
      "Title": 1,
      "Union": 2,
      "_depth": 7,
      "_isRoot": 9,
      "_path0": 13,
      "_path1": 14,
      "_pivot": 8,
      "_sortVal_0": 10,
      "_sortVal_0_0": 15,
      "_sortVal_0_1": 16,
      "_sortVal_0_2": 17,
      "_sortVal_1": 11,
      "_sortVal_1_0": 18,
      "_sortVal_1_1": 19,
      "_sortVal_1_2": 20,
      "_sortVal_2": 12,
    },
    "columnMetadata": Object {
      "Base": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "JobFamily": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "Name": Object {
        "displayName": "Name",
        "type": "text",
      },
      "Rec": Object {
        "displayName": "Rec",
        "type": "integer",
      },
      "TCOE": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "Title": Object {
        "displayName": "Title",
        "type": "text",
      },
      "Union": Object {
        "displayName": "Union",
        "type": "text",
      },
      "_depth": Object {
        "displayName": "_depth",
        "type": "integer",
      },
      "_isRoot": Object {
        "displayName": "_isRoot",
        "type": "boolean",
      },
      "_path0": Object {
        "displayName": "_path0",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "_path1",
        "type": "text",
      },
      "_pivot": Object {
        "displayName": "_pivot",
        "type": "text",
      },
      "_sortVal_0": Object {
        "displayName": "_sortVal_0",
        "type": "integer",
      },
      "_sortVal_0_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_0_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_0_2": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_1": Object {
        "displayName": "_sortVal_1",
        "type": "integer",
      },
      "_sortVal_1_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_1_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_1_2": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_2": Object {
        "displayName": "_sortVal_2",
        "type": "integer",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
      "Rec",
      "_depth",
      "_pivot",
      "_isRoot",
      "_sortVal_0",
      "_sortVal_1",
      "_sortVal_2",
      "_path0",
      "_path1",
      "_sortVal_0_0",
      "_sortVal_0_1",
      "_sortVal_0_2",
      "_sortVal_1_0",
      "_sortVal_1_1",
      "_sortVal_1_2",
    ],
  },
}
`;

exports[`async aggTree sortedTreeQuery test 4`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 3251221,
      "JobFamily": null,
      "Name": null,
      "Rec": 23,
      "TCOE": 4691559,
      "Title": null,
      "Union": null,
      "_depth": 0,
      "_isRoot": 1,
      "_path0": null,
      "_path1": null,
      "_pivot": null,
      "_sortVal_0": 0,
      "_sortVal_0_0": null,
      "_sortVal_0_1": null,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 1030722,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 4,
      "TCOE": 1389290,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": null,
      "_pivot": "Executive Management",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 611161,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 2,
      "TCOE": 819582,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "General Manager",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "Rec": 1,
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Dugger, Dorothy",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 1,
    },
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "Rec": 1,
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Crunican, Grace",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
      "_sortVal_2": 1,
    },
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "Rec": 1,
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Assistant General Manager Operations",
      "_pivot": "Assistant General Manager Operations",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 288160,
      "_sortVal_1_1": 212647,
      "_sortVal_1_2": "Assistant General Manager Operations",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "Rec": 1,
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Deputy General Manager",
      "_pivot": "Deputy General Manager",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 1,
      "_sortVal_1_0": 281548,
      "_sortVal_1_1": 206914,
      "_sortVal_1_2": "Deputy General Manager",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 564028,
      "JobFamily": "Legal & Paralegal",
      "Name": null,
      "Rec": 3,
      "TCOE": 766571,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Legal & Paralegal",
      "_path1": null,
      "_pivot": "Legal & Paralegal",
      "_sortVal_0": 1,
      "_sortVal_0_0": 766571,
      "_sortVal_0_1": 564028,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 413909,
      "JobFamily": "Transportation Operations",
      "Name": null,
      "Rec": 5,
      "TCOE": 709998,
      "Title": null,
      "Union": null,
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Transportation Operations",
      "_path1": null,
      "_pivot": "Transportation Operations",
      "_sortVal_0": 1,
      "_sortVal_0_0": 709998,
      "_sortVal_0_1": 413909,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 366223,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": null,
      "Rec": 5,
      "TCOE": 594761,
      "Title": null,
      "Union": "SEIU",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": null,
      "_pivot": "Maintenance, Vehicle & Facilities",
      "_sortVal_0": 1,
      "_sortVal_0_0": 594761,
      "_sortVal_0_1": 366223,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 309734,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": null,
      "Rec": 2,
      "TCOE": 422244,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Engineering & Systems Engineering",
      "_path1": null,
      "_pivot": "Engineering & Systems Engineering",
      "_sortVal_0": 1,
      "_sortVal_0_0": 422244,
      "_sortVal_0_1": 309734,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "Rec": 1,
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Finance & Accounting",
      "_path1": null,
      "_pivot": "Finance & Accounting",
      "_sortVal_0": 1,
      "_sortVal_0_0": 287139,
      "_sortVal_0_1": 208744,
      "_sortVal_0_2": "Controller-Treasurer",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "Rec": 1,
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Safety",
      "_path1": null,
      "_pivot": "Safety",
      "_sortVal_0": 1,
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "Rec": 1,
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Safety",
      "_path1": "Chief Safety Officer",
      "_pivot": "Chief Safety Officer",
      "_sortVal_0": 1,
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
      "_sortVal_1": 1,
      "_sortVal_1_0": 211941,
      "_sortVal_1_1": 152125,
      "_sortVal_1_2": "Chief Safety Officer",
      "_sortVal_2": 0,
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "Rec": 1,
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Public Affairs & Marketing",
      "_path1": null,
      "_pivot": "Public Affairs & Marketing",
      "_sortVal_0": 1,
      "_sortVal_0_0": 181955,
      "_sortVal_0_1": 130035,
      "_sortVal_0_2": "Department Manager Gov't & Comm Rel",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "Rec": 1,
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Police",
      "_path1": null,
      "_pivot": "Police",
      "_sortVal_0": 1,
      "_sortVal_0_0": 127660,
      "_sortVal_0_1": 75701,
      "_sortVal_0_2": "Revenue Protection Guard",
      "_sortVal_1": 0,
      "_sortVal_1_0": null,
      "_sortVal_1_1": null,
      "_sortVal_1_2": null,
      "_sortVal_2": 0,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "Base": 4,
      "JobFamily": 0,
      "Name": 3,
      "Rec": 6,
      "TCOE": 5,
      "Title": 1,
      "Union": 2,
      "_depth": 7,
      "_isRoot": 9,
      "_path0": 13,
      "_path1": 14,
      "_pivot": 8,
      "_sortVal_0": 10,
      "_sortVal_0_0": 15,
      "_sortVal_0_1": 16,
      "_sortVal_0_2": 17,
      "_sortVal_1": 11,
      "_sortVal_1_0": 18,
      "_sortVal_1_1": 19,
      "_sortVal_1_2": 20,
      "_sortVal_2": 12,
    },
    "columnMetadata": Object {
      "Base": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "JobFamily": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "Name": Object {
        "displayName": "Name",
        "type": "text",
      },
      "Rec": Object {
        "displayName": "Rec",
        "type": "integer",
      },
      "TCOE": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "Title": Object {
        "displayName": "Title",
        "type": "text",
      },
      "Union": Object {
        "displayName": "Union",
        "type": "text",
      },
      "_depth": Object {
        "displayName": "_depth",
        "type": "integer",
      },
      "_isRoot": Object {
        "displayName": "_isRoot",
        "type": "boolean",
      },
      "_path0": Object {
        "displayName": "_path0",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "_path1",
        "type": "text",
      },
      "_pivot": Object {
        "displayName": "_pivot",
        "type": "text",
      },
      "_sortVal_0": Object {
        "displayName": "_sortVal_0",
        "type": "integer",
      },
      "_sortVal_0_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_0_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_0_2": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_1": Object {
        "displayName": "_sortVal_1",
        "type": "integer",
      },
      "_sortVal_1_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_1_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_1_2": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_2": Object {
        "displayName": "_sortVal_2",
        "type": "integer",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
      "Rec",
      "_depth",
      "_pivot",
      "_isRoot",
      "_sortVal_0",
      "_sortVal_1",
      "_sortVal_2",
      "_path0",
      "_path1",
      "_sortVal_0_0",
      "_sortVal_0_1",
      "_sortVal_0_2",
      "_sortVal_1_0",
      "_sortVal_1_1",
      "_sortVal_1_2",
    ],
  },
}
`;

exports[`basic sorted aggTree test 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_sortVal_0_0": 422244,
      "_sortVal_0_1": 309734,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Executive Management",
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Finance & Accounting",
      "_sortVal_0_0": 287139,
      "_sortVal_0_1": 208744,
      "_sortVal_0_2": "Controller-Treasurer",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_sortVal_0_0": 766571,
      "_sortVal_0_1": 564028,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_sortVal_0_0": 594761,
      "_sortVal_0_1": 366223,
      "_sortVal_0_2": null,
    },
    Object {
      "_path0": "Police",
      "_sortVal_0_0": 127660,
      "_sortVal_0_1": 75701,
      "_sortVal_0_2": "Revenue Protection Guard",
    },
    Object {
      "_path0": "Public Affairs & Marketing",
      "_sortVal_0_0": 181955,
      "_sortVal_0_1": 130035,
      "_sortVal_0_2": "Department Manager Gov't & Comm Rel",
    },
    Object {
      "_path0": "Safety",
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_sortVal_0_0": 709998,
      "_sortVal_0_1": 413909,
      "_sortVal_0_2": null,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "_path0": 0,
      "_sortVal_0_0": 1,
      "_sortVal_0_1": 2,
      "_sortVal_0_2": 3,
    },
    "columnMetadata": Object {
      "_path0": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "_sortVal_0_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_0_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_0_2": Object {
        "displayName": "Title",
        "type": "text",
      },
    },
    "columns": Array [
      "_path0",
      "_sortVal_0_0",
      "_sortVal_0_1",
      "_sortVal_0_2",
    ],
  },
}
`;

exports[`basic sorted aggTree test 2`] = `
TableRep {
  "rowData": Array [
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_path1": "Group Manager Systems Capital Prog",
      "_sortVal_1_0": 212535,
      "_sortVal_1_1": 152434,
      "_sortVal_1_2": "Group Manager Systems Capital Prog",
    },
    Object {
      "_path0": "Engineering & Systems Engineering",
      "_path1": "Group Manager, Capital Projects",
      "_sortVal_1_0": 209709,
      "_sortVal_1_1": 157300,
      "_sortVal_1_2": "Group Manager, Capital Projects",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "Assistant General Manager Operations",
      "_sortVal_1_0": 288160,
      "_sortVal_1_1": 212647,
      "_sortVal_1_2": "Assistant General Manager Operations",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "Deputy General Manager",
      "_sortVal_1_0": 281548,
      "_sortVal_1_1": 206914,
      "_sortVal_1_2": "Deputy General Manager",
    },
    Object {
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_sortVal_1_0": 819582,
      "_sortVal_1_1": 611161,
      "_sortVal_1_2": "General Manager",
    },
    Object {
      "_path0": "Finance & Accounting",
      "_path1": "Controller-Treasurer",
      "_sortVal_1_0": 287139,
      "_sortVal_1_1": 208744,
      "_sortVal_1_2": "Controller-Treasurer",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_path1": "General Counsel",
      "_sortVal_1_0": 321543,
      "_sortVal_1_1": 238269,
      "_sortVal_1_2": "General Counsel",
    },
    Object {
      "_path0": "Legal & Paralegal",
      "_path1": "Senior Attorney",
      "_sortVal_1_0": 445028,
      "_sortVal_1_1": 325759,
      "_sortVal_1_2": "Senior Attorney",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Electrician",
      "_sortVal_1_0": 113775,
      "_sortVal_1_1": 59817,
      "_sortVal_1_2": "Electrician",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Structures Inspector",
      "_sortVal_1_0": 124962,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Structures Inspector",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Transit Vehicle Mechanic",
      "_sortVal_1_0": 104260,
      "_sortVal_1_1": 74068,
      "_sortVal_1_2": "Transit Vehicle Mechanic",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Vehicle Inspector",
      "_sortVal_1_0": 123432,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Vehicle Inspector",
    },
    Object {
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": "Wayside Inspector",
      "_sortVal_1_0": 128332,
      "_sortVal_1_1": 77446,
      "_sortVal_1_2": "Wayside Inspector",
    },
    Object {
      "_path0": "Police",
      "_path1": "Revenue Protection Guard",
      "_sortVal_1_0": 127660,
      "_sortVal_1_1": 75701,
      "_sortVal_1_2": "Revenue Protection Guard",
    },
    Object {
      "_path0": "Public Affairs & Marketing",
      "_path1": "Department Manager Gov't & Comm Rel",
      "_sortVal_1_0": 181955,
      "_sortVal_1_1": 130035,
      "_sortVal_1_2": "Department Manager Gov't & Comm Rel",
    },
    Object {
      "_path0": "Safety",
      "_path1": "Chief Safety Officer",
      "_sortVal_1_0": 211941,
      "_sortVal_1_1": 152125,
      "_sortVal_1_2": "Chief Safety Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Chief Transportation Officer",
      "_sortVal_1_0": 238211,
      "_sortVal_1_1": 170383,
      "_sortVal_1_2": "Chief Transportation Officer",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Station Agent",
      "_sortVal_1_0": 352988,
      "_sortVal_1_1": 182342,
      "_sortVal_1_2": "Station Agent",
    },
    Object {
      "_path0": "Transportation Operations",
      "_path1": "Train Operator",
      "_sortVal_1_0": 118799,
      "_sortVal_1_1": 61184,
      "_sortVal_1_2": "Train Operator",
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "_path0": 0,
      "_path1": 1,
      "_sortVal_1_0": 2,
      "_sortVal_1_1": 3,
      "_sortVal_1_2": 4,
    },
    "columnMetadata": Object {
      "_path0": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_1_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_1_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_1_2": Object {
        "displayName": "Title",
        "type": "text",
      },
    },
    "columns": Array [
      "_path0",
      "_path1",
      "_sortVal_1_0",
      "_sortVal_1_1",
      "_sortVal_1_2",
    ],
  },
}
`;

exports[`basic sorted aggTree test 3`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 309734,
      "JobFamily": "Engineering & Systems Engineering",
      "Name": null,
      "Rec": 2,
      "TCOE": 422244,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Engineering & Systems Engineering",
      "_path1": null,
      "_pivot": "Engineering & Systems Engineering",
      "_sortVal_0": 1,
      "_sortVal_0_0": 422244,
      "_sortVal_0_1": 309734,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 1030722,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 4,
      "TCOE": 1389290,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": null,
      "_pivot": "Executive Management",
      "_sortVal_0": 1,
      "_sortVal_0_0": 1389290,
      "_sortVal_0_1": 1030722,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 208744,
      "JobFamily": "Finance & Accounting",
      "Name": "Schroeder, Scott",
      "Rec": 1,
      "TCOE": 287139,
      "Title": "Controller-Treasurer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Finance & Accounting",
      "_path1": null,
      "_pivot": "Finance & Accounting",
      "_sortVal_0": 1,
      "_sortVal_0_0": 287139,
      "_sortVal_0_1": 208744,
      "_sortVal_0_2": "Controller-Treasurer",
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 564028,
      "JobFamily": "Legal & Paralegal",
      "Name": null,
      "Rec": 3,
      "TCOE": 766571,
      "Title": null,
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Legal & Paralegal",
      "_path1": null,
      "_pivot": "Legal & Paralegal",
      "_sortVal_0": 1,
      "_sortVal_0_0": 766571,
      "_sortVal_0_1": 564028,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 366223,
      "JobFamily": "Maintenance, Vehicle & Facilities",
      "Name": null,
      "Rec": 5,
      "TCOE": 594761,
      "Title": null,
      "Union": "SEIU",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Maintenance, Vehicle & Facilities",
      "_path1": null,
      "_pivot": "Maintenance, Vehicle & Facilities",
      "_sortVal_0": 1,
      "_sortVal_0_0": 594761,
      "_sortVal_0_1": 366223,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 75701,
      "JobFamily": "Police",
      "Name": "Ornellas, Robert",
      "Rec": 1,
      "TCOE": 127660,
      "Title": "Revenue Protection Guard",
      "Union": "BPOA",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Police",
      "_path1": null,
      "_pivot": "Police",
      "_sortVal_0": 1,
      "_sortVal_0_0": 127660,
      "_sortVal_0_1": 75701,
      "_sortVal_0_2": "Revenue Protection Guard",
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 130035,
      "JobFamily": "Public Affairs & Marketing",
      "Name": "Hamill, Kerry",
      "Rec": 1,
      "TCOE": 181955,
      "Title": "Department Manager Gov't & Comm Rel",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Public Affairs & Marketing",
      "_path1": null,
      "_pivot": "Public Affairs & Marketing",
      "_sortVal_0": 1,
      "_sortVal_0_0": 181955,
      "_sortVal_0_1": 130035,
      "_sortVal_0_2": "Department Manager Gov't & Comm Rel",
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 152125,
      "JobFamily": "Safety",
      "Name": "Hardy, Leonard",
      "Rec": 1,
      "TCOE": 211941,
      "Title": "Chief Safety Officer",
      "Union": "Non-Represented",
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Safety",
      "_path1": null,
      "_pivot": "Safety",
      "_sortVal_0": 1,
      "_sortVal_0_0": 211941,
      "_sortVal_0_1": 152125,
      "_sortVal_0_2": "Chief Safety Officer",
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 413909,
      "JobFamily": "Transportation Operations",
      "Name": null,
      "Rec": 5,
      "TCOE": 709998,
      "Title": null,
      "Union": null,
      "_depth": 1,
      "_isRoot": 0,
      "_path0": "Transportation Operations",
      "_path1": null,
      "_pivot": "Transportation Operations",
      "_sortVal_0": 1,
      "_sortVal_0_0": 709998,
      "_sortVal_0_1": 413909,
      "_sortVal_0_2": null,
      "_sortVal_1": 0,
      "_sortVal_2": 0,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "Base": 4,
      "JobFamily": 0,
      "Name": 3,
      "Rec": 6,
      "TCOE": 5,
      "Title": 1,
      "Union": 2,
      "_depth": 7,
      "_isRoot": 9,
      "_path0": 13,
      "_path1": 14,
      "_pivot": 8,
      "_sortVal_0": 10,
      "_sortVal_0_0": 15,
      "_sortVal_0_1": 16,
      "_sortVal_0_2": 17,
      "_sortVal_1": 11,
      "_sortVal_2": 12,
    },
    "columnMetadata": Object {
      "Base": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "JobFamily": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "Name": Object {
        "displayName": "Name",
        "type": "text",
      },
      "Rec": Object {
        "displayName": "Rec",
        "type": "integer",
      },
      "TCOE": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "Title": Object {
        "displayName": "Title",
        "type": "text",
      },
      "Union": Object {
        "displayName": "Union",
        "type": "text",
      },
      "_depth": Object {
        "displayName": "_depth",
        "type": "integer",
      },
      "_isRoot": Object {
        "displayName": "_isRoot",
        "type": "boolean",
      },
      "_path0": Object {
        "displayName": "_path0",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "_path1",
        "type": "text",
      },
      "_pivot": Object {
        "displayName": "_pivot",
        "type": "text",
      },
      "_sortVal_0": Object {
        "displayName": "_sortVal_0",
        "type": "integer",
      },
      "_sortVal_0_0": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "_sortVal_0_1": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "_sortVal_0_2": Object {
        "displayName": "Title",
        "type": "text",
      },
      "_sortVal_1": Object {
        "displayName": "_sortVal_1",
        "type": "integer",
      },
      "_sortVal_2": Object {
        "displayName": "_sortVal_2",
        "type": "integer",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
      "Rec",
      "_depth",
      "_pivot",
      "_isRoot",
      "_sortVal_0",
      "_sortVal_1",
      "_sortVal_2",
      "_path0",
      "_path1",
      "_sortVal_0_0",
      "_sortVal_0_1",
      "_sortVal_0_2",
    ],
  },
}
`;

exports[`initial aggtree Test 1`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 212647,
      "JobFamily": "Executive Management",
      "Name": "Oversier, Paul",
      "Rec": 1,
      "TCOE": 288160,
      "Title": "Assistant General Manager Operations",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Assistant General Manager Operations",
      "_pivot": "Assistant General Manager Operations",
      "_sortVal_0": 1,
      "_sortVal_1": 1,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 206914,
      "JobFamily": "Executive Management",
      "Name": "DeVaughn, Marcia",
      "Rec": 1,
      "TCOE": 281548,
      "Title": "Deputy General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "Deputy General Manager",
      "_pivot": "Deputy General Manager",
      "_sortVal_0": 1,
      "_sortVal_1": 1,
      "_sortVal_2": 0,
    },
    Object {
      "Base": 611161,
      "JobFamily": "Executive Management",
      "Name": null,
      "Rec": 2,
      "TCOE": 819582,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 2,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "General Manager",
      "_sortVal_0": 1,
      "_sortVal_1": 1,
      "_sortVal_2": 0,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "Base": 4,
      "JobFamily": 0,
      "Name": 3,
      "Rec": 6,
      "TCOE": 5,
      "Title": 1,
      "Union": 2,
      "_depth": 7,
      "_isRoot": 9,
      "_path0": 13,
      "_path1": 14,
      "_pivot": 8,
      "_sortVal_0": 10,
      "_sortVal_1": 11,
      "_sortVal_2": 12,
    },
    "columnMetadata": Object {
      "Base": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "JobFamily": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "Name": Object {
        "displayName": "Name",
        "type": "text",
      },
      "Rec": Object {
        "displayName": "Rec",
        "type": "integer",
      },
      "TCOE": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "Title": Object {
        "displayName": "Title",
        "type": "text",
      },
      "Union": Object {
        "displayName": "Union",
        "type": "text",
      },
      "_depth": Object {
        "displayName": "_depth",
        "type": "integer",
      },
      "_isRoot": Object {
        "displayName": "_isRoot",
        "type": "boolean",
      },
      "_path0": Object {
        "displayName": "_path0",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "_path1",
        "type": "text",
      },
      "_pivot": Object {
        "displayName": "_pivot",
        "type": "text",
      },
      "_sortVal_0": Object {
        "displayName": "_sortVal_0",
        "type": "integer",
      },
      "_sortVal_1": Object {
        "displayName": "_sortVal_1",
        "type": "integer",
      },
      "_sortVal_2": Object {
        "displayName": "_sortVal_2",
        "type": "integer",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
      "Rec",
      "_depth",
      "_pivot",
      "_isRoot",
      "_sortVal_0",
      "_sortVal_1",
      "_sortVal_2",
      "_path0",
      "_path1",
    ],
  },
}
`;

exports[`initial aggtree Test 2`] = `
TableRep {
  "rowData": Array [
    Object {
      "Base": 312461,
      "JobFamily": "Executive Management",
      "Name": "Crunican, Grace",
      "Rec": 1,
      "TCOE": 399921,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Crunican, Grace",
      "_sortVal_0": 1,
      "_sortVal_1": 1,
      "_sortVal_2": 1,
    },
    Object {
      "Base": 298700,
      "JobFamily": "Executive Management",
      "Name": "Dugger, Dorothy",
      "Rec": 1,
      "TCOE": 419661,
      "Title": "General Manager",
      "Union": "Non-Represented",
      "_depth": 3,
      "_isRoot": 0,
      "_path0": "Executive Management",
      "_path1": "General Manager",
      "_pivot": "Dugger, Dorothy",
      "_sortVal_0": 1,
      "_sortVal_1": 1,
      "_sortVal_2": 1,
    },
  ],
  "schema": Schema {
    "_sortedColumns": null,
    "columnIndices": Object {
      "Base": 4,
      "JobFamily": 0,
      "Name": 3,
      "Rec": 6,
      "TCOE": 5,
      "Title": 1,
      "Union": 2,
      "_depth": 7,
      "_isRoot": 9,
      "_path0": 13,
      "_path1": 14,
      "_pivot": 8,
      "_sortVal_0": 10,
      "_sortVal_1": 11,
      "_sortVal_2": 12,
    },
    "columnMetadata": Object {
      "Base": Object {
        "displayName": "Base",
        "type": "integer",
      },
      "JobFamily": Object {
        "displayName": "Job Family",
        "type": "text",
      },
      "Name": Object {
        "displayName": "Name",
        "type": "text",
      },
      "Rec": Object {
        "displayName": "Rec",
        "type": "integer",
      },
      "TCOE": Object {
        "displayName": "TCOE",
        "type": "integer",
      },
      "Title": Object {
        "displayName": "Title",
        "type": "text",
      },
      "Union": Object {
        "displayName": "Union",
        "type": "text",
      },
      "_depth": Object {
        "displayName": "_depth",
        "type": "integer",
      },
      "_isRoot": Object {
        "displayName": "_isRoot",
        "type": "boolean",
      },
      "_path0": Object {
        "displayName": "_path0",
        "type": "text",
      },
      "_path1": Object {
        "displayName": "_path1",
        "type": "text",
      },
      "_pivot": Object {
        "displayName": "_pivot",
        "type": "text",
      },
      "_sortVal_0": Object {
        "displayName": "_sortVal_0",
        "type": "integer",
      },
      "_sortVal_1": Object {
        "displayName": "_sortVal_1",
        "type": "integer",
      },
      "_sortVal_2": Object {
        "displayName": "_sortVal_2",
        "type": "integer",
      },
    },
    "columns": Array [
      "JobFamily",
      "Title",
      "Union",
      "Name",
      "Base",
      "TCOE",
      "Rec",
      "_depth",
      "_pivot",
      "_isRoot",
      "_sortVal_0",
      "_sortVal_1",
      "_sortVal_2",
      "_path0",
      "_path1",
    ],
  },
}
`;
